[gd_scene load_steps=6 format=3 uid="uid://duqtlqd3ty4nu"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_ggxy7"]
[ext_resource type="PackedScene" uid="uid://driybkq8qi0rh" path="res://addons/HTNDomainManager/PluginSystem/Components/DeleteButton.tscn" id="2_1lj54"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/TaskPanel/TaskLine/TaskLine.gd" id="2_wxfg6"]
[ext_resource type="Texture2D" uid="uid://b5wt3eh8mi4h3" path="res://addons/HTNDomainManager/PluginSystem/Icons/Pen.svg" id="4_mpd5b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etyup"]

[node name="TaskLine" type="HBoxContainer"]
offset_right = 33.0
offset_bottom = 33.0
theme = ExtResource("1_ggxy7")
script = ExtResource("2_wxfg6")

[node name="DeleteButton" parent="." instance=ExtResource("2_1lj54")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_etyup")

[node name="EditButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Task Name"
icon = ExtResource("4_mpd5b")

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
